correction du bug du grid qui dépassait de la div, footer en flex wrap

--- a/style.css
+++ b/style.css
@@ -456,7 +456,7 @@ header #logo
 
 #activite
 {
-    border:3px solid green;
+    /* border:3px solid green; */
     order: 3;
     margin-top: 30px;
     position: relative;
@@ -473,13 +473,13 @@ header #logo
 }
 #cartes_activites
 {
-    border:2px solid blue;
+    /* border:2px solid blue; */
     margin-top: 50px;
     display: grid;
     grid-template-columns: 22% 22% 22% 22%;
     column-gap: 4%;
     grid-template-rows: 250px 50px 250px;
-    row-gap: 4%;
+    row-gap: 50px;
     grid-template-areas:
         "zone1 zone2 zone4 zone5"
         "zone1 zone2 zone4 zone6"
@@ -492,7 +492,7 @@ header #logo
         grid-template-columns: 48% 48%;
         column-gap: 4%;
         grid-template-rows: repeat(4, 250px);
-        row-gap: 4%;
+        row-gap: 50px;
         grid-template-areas:
         "zone1 zone2"
         "zone1 zone3"
@@ -547,38 +547,44 @@ header #logo
 {
     object-fit: cover;
     width: 100%;
-    height: 92%;
+    height: 95%;
     border-radius: 20px 20px 0px 0px;
 }
 .carte_activite .moyenne
 {
     object-fit: cover;
     width: 100%;
-    height: 84%;
+    height: 87%;
     border-radius: 20px 20px 0px 0px;
 }
 .carte_activite .petite
 {
     object-fit: cover;
     width: 100%;
-    height: 79%;
+    height: 82%;
     border-radius: 20px 20px 0px 0px;
 }
 .carte_activite p
 {
+    /* border:1px solid black; */
+    height: 45px;
     font-size: 0.9em;
-    margin-left: 20px;
-    margin-top: 20px;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+    padding-left: 12px;
+    /* margin-top: 20px; */
 }
 
 
 /* SECTION FOOTER */
 footer
 {
-    /* margin-top: 40px; */
+    margin-top: 40px;
     display:flex;
     background-color:#F2F2F2;
     flex-wrap: wrap;
+    /* justify-content: space-around; */
 }
 footer ul
 {
@@ -597,7 +603,9 @@ footer #apropos
     /* margin-top: 20px; */
     /* margin-right: 50px; */
     margin-left: 50px;
-    margin-right: 16%;
+    margin-right: calc(16% - 50px);
+
+    /* margin-right: 16%; */
     /* margin-bottom: 20px; */
     
 }
@@ -605,15 +613,15 @@ footer #apropos
 footer #nos_hebergements
 {
     /* margin-top: 20px; */
-    margin-right: 16%;
-    /* margin-left: 50x; */
+    margin-right: calc(16% - 50px);
+    margin-left: 50px;
     /* margin-bottom: 20px; */
 }
 
-/* footer #assistance */
-/* { */
-    /* margin-top: 20px;
-    margin-right: 50px;
+footer #assistance
+{
+    /* margin-top: 20px; */
+    /* margin-right: 50px; */
     margin-left:50px;
-    margin-bottom: 20px; */
-/* } */
+    /* margin-bottom: 20px; */
+}
